force-app/main/default/objects/Platform_Service__c/Platform_Service__c.object-meta.xml
<CustomObject>
    <label>Platform Service</label>
    <nameField>
        <label>Platform Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>