force-app/main/default/objects/Platform_Service__c/fields/Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Capabilities__c</fullName>
    <label>Capabilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>