force-app/main/default/objects/Platform_Service__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Dev Tools</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>