force-app/main/default/objects/Platform_Service__c/fields/Internal_Use__c.field-meta.xml
<CustomField>
    <fullName>Internal_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Use</label>
    <type>Checkbox</type>
</CustomField>